v1/README.md
If you use this data in your research, please refer to and cite: M**arilyn A. Walker, Pranav Anand, Jean E. Fox Tree, Rob Abbott, Joseph King. "A Corpus for Research on Deliberation and Debate." In Proceedings of the 8th International Conference on Language Resources and Evaluation (LREC), Istanbul, Turkey, 2012.**


Overview: The Internet Argument Corpus (IAC) is a corpus for research in political debate on internet forums. It consists of ~11,000 disscussions, ~390,000 posts, and some ~73,000,000 words. Subsets of the data have been annotated for topic, stance, agreement, sarcasm, and nastiness among others.

The Data: The data is stored in JSON files with most annotations in CSV format (see included readme for details). Python code to load and use the data is included. The zip archive is 158MB.

Works that use this corpus: 

    Rob Abbott, Marilyn Walker, Pranav Anand, Jean E. Fox Tree, Robeson Bowmani, and Joseph King. "How can you say such things?!?: Recognizing Disagreement in Informal Political Argument".  In Proceedings of the Workshop on Language in Social Media (LSM), Portland, Oregon, USA, 2011.
    Marilyn A. Walker, Pranav Anand, Jean E. Fox Tree, Rob Abbott, Joseph King. "A Corpus for Research on Deliberation and Debate." In Proceedings of the 8th International Conference on Language Resources and Evaluation (LREC), Istanbul, Turkey, 2012.

    Walker, M. and Anand, P and Abbott, R. and Tree, J.E.F. and Martell, C. and King, J. "That's your evidence:? Classifying Stance in Online Political and Social Debate." In Decision Support Sciences, 1-30, 2012.

    MA Walker, P Anand, R Abbott, R Grant. "Stance classification using dialogic properties of persuasion." In 3rd Workshop on Computational Approaches to Subjectivity and Sentiment Analysis (WASSA), Seogwipo,  Korea, 2012.

    A Misra, MA Walker. "Topic independent identification of agreement and disagreement in social media dialogue." In 14th Annual SIGdial Meeting on Discourse and Dialogue, (SIGDIAL), Metz, France, 2013.
    Stephanie Lukin and Marilyn Walker. "Really? Well. Apparently Bootstrapping Improves the Performance of Sarcasm and Nastiness Classifiers for Online Dialogue." In The Workshop on Language Analysis in Social Media (LASM), Atlanta, Georgia, USA, 2013.

    Reid Swanson, Stephanie Lukin, Luke Eisenberg, Thomas Corcoran and Marilyn Walker. "Getting Reliable Annotations for Sarcasm in Online Dialogues." In 9th Edition of its Language Resources and Evaluation Conference (LREC), Reykjavik, Iceland, 2014.

    Raquel Justo, Thomas Corcoran, Stephanie M Lukin, Marilyn Walker, and M Ine ́s Torres. "Extracting Relevant Knowledge for the Detection of Sarcasm and Nastiness in the Social Web." In Knowledge-Based Systems, 69:124–133, 2014.
