v2/README.md
Internet Argument Corpus v2

If you use this data in your research, please refer to and cite:

    Rob Abbott, Brian Ecker, Pranav Anand, Marilyn A. Walker. "Internet Argument Corpus 2.0: An SQL schema for Dialogic Social Media and the Corpora to go with it." In Language Resources and Evaluation Conference (LREC), Portorož, Slovenia, 2016.

    Marilyn A. Walker, Pranav Anand, Jean E. Fox Tree, Rob Abbott, Joseph King. "A Corpus for Research on Deliberation and Debate." In Proceedings of the 8th International Conference on Language Resources and Evaluation (LREC), Istanbul, Turkey, 2012.

Overview: The Internet Argument Corpus (IAC) version 2 is a collection of corpora for research in political debate on internet forums. It consists of three datasets: 4forums (414K posts), ConvinceMe (65K posts), and a sample from CreateDebate (3K posts). It includes topic annotations, response characterizations (4forums), and stance.

The Data: The data is stored in MySQL databases. The supporting code uses Python3 and SQLAlchemy.

Works that use this corpus:

    Rob Abbott, Marilyn Walker, Pranav Anand, Jean E. Fox Tree, Robeson Bowmani, and Joseph King. "How can you say such things?!?: Recognizing Disagreement in Informal Political Argument".  In Proceedings of the Workshop on Language in Social Media (LSM), Portland, Oregon, USA, 2011.
    Marilyn A. Walker, Pranav Anand, Jean E. Fox Tree, Rob Abbott, Joseph King. "A Corpus for Research on Deliberation and Debate." In Proceedings of the 8th International Conference on Language Resources and Evaluation (LREC), Istanbul, Turkey, 2012.

    Walker, M. and Anand, P and Abbott, R. and Tree, J.E.F. and Martell, C. and King, J. "That's your evidence:? Classifying Stance in Online Political and Social Debate." In Decision Support Sciences, 1-30, 2012.

    MA Walker, P Anand, R Abbott, R Grant. "Stance classification using dialogic properties of persuasion." In 3rd Workshop on Computational Approaches to Subjectivity and Sentiment Analysis (WASSA), Seogwipo,  Korea, 2012.

    A Misra, MA Walker. "Topic independent identification of agreement and disagreement in social media dialogue." In 14th Annual SIGdial Meeting on Discourse and Dialogue, (SIGDIAL), Metz, France, 2013.
    Stephanie Lukin and Marilyn Walker. "Really? Well. Apparently Bootstrapping Improves the Performance of Sarcasm and Nastiness Classifiers for Online Dialogue." In The Workshop on Language Analysis in Social Media (LASM), Atlanta, Georgia, USA, 2013.

    Reid Swanson, Stephanie Lukin, Luke Eisenberg, Thomas Corcoran and Marilyn Walker. "Getting Reliable Annotations for Sarcasm in Online Dialogues." In 9th Edition of its Language Resources and Evaluation Conference (LREC), Reykjavik, Iceland, 2014.

    Raquel Justo, Thomas Corcoran, Stephanie M Lukin, Marilyn Walker, and M Ine ́s Torres. "Extracting Relevant Knowledge for the Detection of Sarcasm and Nastiness in the Social Web." In Knowledge-Based Systems, 69:124–133, 2014.


Code for manipulation: https://bitbucket.org/nlds_iac/internet-argument-corpus-2/src/master/
